# ai_orchestrator

./: .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  PORTABILITY_COMPLETE.md  README.md  pyproject.toml
ai_orchestrator/: .env.example  .gitignore  ARCHITECTURE.md  INSTALL.md  MANIFEST.in  PORTABILITY.md  PROFESSIONAL_TOOLS_SUMMARY.md  QUICKSTART.md  README.md  SENIOR_DEV_GUIDELINES.md  __init__.py  __main__.py  agents.py  chat.py  cli.py  config.py  env_loader.py  orchestrator_chat.py  pyproject.toml  runner.py  scaffold.py  setup.py
ai_orchestrator/agent_tools/: __init__.py  confirm.py  fs_tools.py  kg_tools.py  memory_tools.py  scaffold_tools.py  shell_tools.py  skill_tools.py  tool_context.py  web_tools.py
ai_orchestrator/agents/: __init__.py  base.py  claude.py  codex.py  gemini.py  ollama.py
ai_orchestrator/cli/: main.py
ai_orchestrator/cli/commands/: chat.py  context.py  init.py  plan.py  run.py
ai_orchestrator/config/: __init__.py  loader.py
ai_orchestrator/core/: __init__.py  agent_graph.py  context.py  orchestrator.py  runner.py
ai_orchestrator/examples/task-manager/: brief.md
ai_orchestrator/knowledge_graph/: __init__.py  builder.py  resolver.py  store.py
ai_orchestrator/llm/: __init__.py  providers.py  registry.py
ai_orchestrator/scaffolding/: __init__.py  generator.py
ai_orchestrator/skills/: __init__.py  build.md  debug.md  deploy.md  plan.md  test.md
ai_orchestrator/templates/: README.md
ai_orchestrator/templates/web_app/: .env.example  orchestrator.toml
ai_orchestrator/tools/: __init__.py  senior_dev.py
examples/: README.md
(+16 files in other folders)
