[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-orchestrator"
version = "0.2.0"
description = "LangGraph-powered CLI coding agent for planning, building, testing, and deploying apps against your own hosted models."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.0",
    "langchain-openai>=1.0",
    "langgraph>=1.0",
    "langgraph-checkpoint-sqlite>=2.0",
    "rich>=13.0",
    "rich-argparse>=1.5",
    "ddgs>=9.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
ai-orchestrator = "ai_orchestrator.cli:main"

[tool.setuptools.packages.find]
include = ["ai_orchestrator*"]

[tool.setuptools.package-data]
ai_orchestrator = [
    "py.typed",
    "skills/*.md",
    "templates/**/*",
]
